commit to switch branches

--- a/src/app/leaderboard/goalies/goalies.component.html
+++ b/src/app/leaderboard/goalies/goalies.component.html
@@ -1,146 +1,148 @@
 <filters></filters>
-<table
-  mat-table
-  class="table-data table-hover table-bordered border-secondary"
-  [dataSource]="dataSource"
-  matSort
-  (matSortChange)="onSortChange($event)"
->
-  <caption>
-    {{
-      season
-    }}
-    NHL Player Leadboards - Hover over the column names for more info.
-  </caption>
-  <ng-container matColumnDef="name">
-    <th
-      mat-header-cell
-      *matHeaderCellDef
-      mat-sort-header="lastName"
-      class="left"
-    >
-      Name
-    </th>
-    <td mat-cell *matCellDef="let player" class="left">
-      <div class="logo-div">
-        <img
-          src="{{
-            'https://assets.nhle.com/mugs/nhl/latest/' +
-              player.playerID +
-              '.png'
-          }}"
-          class="logo row"
-        />
-        <div class="row text-size">
-          {{ player.firstName }} {{ player.lastName }}
-        </div>
-      </div>
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef>Position</th>
-    <td mat-cell *matCellDef="let player" class="small-column">
-      {{ getPlayerPosition(player.position) }}
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="team">
-    <th mat-header-cell *matHeaderCellDef>Team</th>
-    <td mat-cell *matCellDef="let player">
-      <a [routerLink]="['/teams', player.teamId]" class="plain-link">
+<div *ngIf="dataSource2 | async as data">
+  <table
+    mat-table
+    class="table-data table-hover table-bordered border-secondary"
+    [dataSource]="data"
+    matSort
+    (matSortChange)="onSortChange($event)"
+  >
+    <caption>
+      {{
+        season
+      }}
+      NHL Player Leaderboard - Hover over the column names for more info.
+    </caption>
+    <ng-container matColumnDef="name">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header="lastName"
+        class="left"
+      >
+        Name
+      </th>
+      <td mat-cell *matCellDef="let player" class="left">
         <div class="logo-div">
           <img
-            src="{{ 'assets/teams/' + player.team + '.png' }}"
+            src="{{
+              'https://assets.nhle.com/mugs/nhl/latest/' +
+                player.playerID +
+                '.png'
+            }}"
             class="logo row"
           />
-          <div class="row text-size">{{ player.team }}</div>
+          <div class="row text-size">
+            {{ player.firstName }} {{ player.lastName }}
+          </div>
         </div>
-      </a>
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="starts">
-    <th
-      mat-header-cell
-      *matHeaderCellDef
-      mat-sort-header="starts"
-      [matTooltip]="getTooltip('starts')"
-      matTooltipPosition="above"
-    >
-      Starts
-    </th>
-    <td
-      mat-cell
-      *matCellDef="let player"
-      [ngStyle]="getCellColors(player.starts, 'starts')"
-      class="small-column"
-    >
-      {{ roundDecimal(player.starts) }}
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="shootout">
-    <th
-      mat-header-cell
-      *matHeaderCellDef
-      mat-sort-header="shootout"
-      [matTooltip]="getTooltip('shootout')"
-      matTooltipPosition="above"
-    >
-      Shootout
-    </th>
-    <td
-      mat-cell
-      *matCellDef="let player"
-      [ngStyle]="getCellColors(player.shootout, 'shootout')"
-      class="small-column"
-    >
-      {{ roundDecimal(player.shootout) }}
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="pk">
-    <th
-      mat-header-cell
-      *matHeaderCellDef
-      mat-sort-header="pk"
-      [matTooltip]="getTooltip('pk')"
-      matTooltipPosition="above"
-    >
-      PK
-    </th>
-    <td
-      mat-cell
-      *matCellDef="let player"
-      [ngStyle]="getCellColors(player.pk, 'pk')"
-      class="small-column"
-    >
-      {{ roundDecimal(player.pk) }}
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="ev">
-    <th
-      mat-header-cell
-      *matHeaderCellDef
-      mat-sort-header="ev"
-      [matTooltip]="getTooltip('ev')"
-      matTooltipPosition="above"
-    >
-      EV
-    </th>
-    <td
-      mat-cell
-      *matCellDef="let player"
-      [ngStyle]="getCellColors(player.ev, 'ev')"
-      class="small-column"
-    >
-      {{ roundDecimal(player.ev) }}
-    </td>
-  </ng-container>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef>Position</th>
+      <td mat-cell *matCellDef="let player" class="small-column">
+        {{ player.position }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="team">
+      <th mat-header-cell *matHeaderCellDef>Team</th>
+      <td mat-cell *matCellDef="let player">
+        <a [routerLink]="['/teams', player.teamId]" class="plain-link">
+          <div class="logo-div">
+            <img
+              src="{{ 'assets/teams/' + player.team + '.png' }}"
+              class="logo row"
+            />
+            <div class="row text-size">{{ player.team }}</div>
+          </div>
+        </a>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="starts">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header="starts"
+        [matTooltip]="getTooltip('starts')"
+        matTooltipPosition="above"
+      >
+        Starts
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let player"
+        [ngStyle]="getCellColors(player.starts, 'starts')"
+        class="small-column"
+      >
+        {{ player.starts }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="shootout">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header="shootout"
+        [matTooltip]="getTooltip('shootout')"
+        matTooltipPosition="above"
+      >
+        Shootout
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let player"
+        [ngStyle]="getCellColors(player.shootout, 'shootout')"
+        class="small-column"
+      >
+        {{ player.shootout }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="pk">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header="pk"
+        [matTooltip]="getTooltip('pk')"
+        matTooltipPosition="above"
+      >
+        PK
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let player"
+        [ngStyle]="getCellColors(player.pk, 'pk')"
+        class="small-column"
+      >
+        {{ player.pk }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="ev">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header="ev"
+        [matTooltip]="getTooltip('ev')"
+        matTooltipPosition="above"
+      >
+        EV
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let player"
+        [ngStyle]="getCellColors(player.ev, 'ev')"
+        class="small-column"
+      >
+        {{ player.ev }}
+      </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr
-    mat-row
-    *matRowDef="let player; columns: displayedColumns"
-    [routerLink]="['/', player.playerID, 'year', season]"
-  ></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr
+      mat-row
+      *matRowDef="let player; columns: displayedColumns"
+      [routerLink]="['/', player.playerID, 'year', season]"
+    ></tr>
+  </table>
+</div>
 
 <mat-paginator
   [pageSize]="25"
