--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -102,24 +102,27 @@
                   (click)="toggleDropdown()"
                   [routerLink]="['/leaderboard/skaters']"
                 >
+                  <mat-icon> ice_skating</mat-icon>
                   Skaters
-                  <img src="/assets/skater.png" class="logo" />
+
+                  <!-- <img src="/assets/skater.png" class="logo" /> -->
                 </li>
                 <li
                   class="dropdown-item"
                   (click)="toggleDropdown()"
                   [routerLink]="['/leaderboard/goalies']"
                 >
+                  <mat-icon> sports_hockey</mat-icon>
                   Goalies
-                  <img src="/assets/mask.png" class="logo" />
+                  <!-- <img src="/assets/mask.png" class="logo" /> -->
                 </li>
                 <li
                   class="dropdown-item"
                   (click)="toggleDropdown()"
                   [routerLink]="['/leaderboard/teams']"
                 >
+                  <mat-icon> group</mat-icon>
                   Teams
-                  <img src="/assets/jersey.png" class="logo" />
                 </li>
               </ul>
             </div>
