--- a/src/app/leaderboard/skaters/skaters.component.html
+++ b/src/app/leaderboard/skaters/skaters.component.html
@@ -1,4 +1,3 @@
-<filters></filters>
 <table
   mat-table
   class="table-data table-hover table-bordered border-secondary"
@@ -7,10 +6,7 @@
   (matSortChange)="onSortChange($event)"
 >
   <caption>
-    {{
-      season
-    }}
-    NHL Player Leaderboards - Hover over the column names for more info.
+    Hover over the column names for more info.
   </caption>
   <ng-container matColumnDef="name">
     <th
