--- a/src/app/leaderboard/goalies/goalies.component.html
+++ b/src/app/leaderboard/goalies/goalies.component.html
@@ -139,8 +139,8 @@
 </table>
 
 <mat-paginator
-  [pageSize]="25"
-  [pageSizeOptions]="[25, 50, 100, 500]"
+  [pageSize]="10"
+  [pageSizeOptions]="[10, 25, 50, 100, 500]"
   [length]="dataSource.data.length"
   showFirstLastButtons
 ></mat-paginator>
