--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -13,7 +13,7 @@
           <div class="header">
             <div class="header-title">Filters</div>
             <button mat-icon-button (click)="closeSidenav()">
-              <mat-icon style="color: lightcoral">close</mat-icon>
+              <mat-icon class="close-icon">close</mat-icon>
             </button>
           </div>
 
