--- a/src/app/cards/cards.component.css
+++ b/src/app/cards/cards.component.css
@@ -158,6 +158,16 @@
   padding: 10px;
 }
 
+.gamescore {
+  text-align-last: center;
+}
+
+.rolling-average-checkbox {
+  text-align: -webkit-center;
+  margin-left: 10px;
+  margin-top: 50px;
+}
+
 @keyframes sparkle {
   0%,
   100% {
