--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,79 +1,29 @@
 <nav-bar></nav-bar>
-<div class="list">
-  <filters></filters>
-  <div class="table-wrapper">
-    <table
-      mat-table
-      class="table caption-top table-hover table-bordered border-primary"
-      [dataSource]="dataSource"
-      matSort
-    >
-      <caption>
-        {{
-          season
-        }}
-        NHL Players
-      </caption>
-      <ng-container matColumnDef="name">
-        <th
-          mat-header-cell
-          *matHeaderCellDef
-          mat-sort-header="lastName"
-          class="left"
-        >
-          Name
-        </th>
-        <td mat-cell *matCellDef="let player" class="left">
-          <img
-            src="{{
-              'https://assets.nhle.com/mugs/nhl/latest/' +
-                player.playerID +
-                '.png'
-            }}"
-            class="logo"
-          />{{ player.firstName }} {{ player.lastName }}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="position">
-        <th
-          mat-header-cell
-          *matHeaderCellDef
-          mat-sort-header="position"
-          class="small-column"
-        >
-          Position
-        </th>
-        <td mat-cell *matCellDef="let player">{{ player.position }}</td>
-      </ng-container>
-      <ng-container matColumnDef="team">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header="team">Team</th>
-        <td mat-cell *matCellDef="let player">
-          <img
-            src="{{ 'assets/teams/' + player.team + '.png' }}"
-            class="logo"
-          />{{ player.team }}
-        </td>
-      </ng-container>
+<div class="landing-container">
+  Welcome to the landing page!
+  <div class="notes-table" *ngIf="releaseNotes$ | async as releaseNotes">
+    <h1>Release Notes</h1>
+    <div class="release-notes" *ngFor="let note of releaseNotes">
+      <div class="note-header">
+        <span class="note-description">
+          <span class="note-title"> {{ note.title }} </span>
+          By {{ note.author }}
+        </span>
+        <span>{{ note.date | date : "shortDate" }}</span>
+      </div>
+      <div class="note-body">
+        <img
+          src="assets/{{ imageMap[note.author] }}"
+          class="masked-image"
+          alt="Fissure in Sandstone"
+        />
 
-      <tr
-        class="table-light"
-        mat-header-row
-        *matHeaderRowDef="['name', 'position', 'team']"
-      ></tr>
-      <tr
-        class="table-light"
-        mat-row
-        *matRowDef="let player; columns: ['name', 'position', 'team']"
-        [routerLink]="['/', player.playerID, 'year', season]"
-      ></tr>
-    </table>
+        <div>{{ note.note }}</div>
 
-    <mat-paginator
-      [pageSize]="10"
-      [pageSizeOptions]="[10, 25, 50]"
-      [length]="dataSource.data.length"
-      showFirstLastButtons
-    ></mat-paginator>
-    <ng-template #emptyState> </ng-template>
+        <a href="{{ note.githubLink }}" target="_blank">
+          <i class="fab fa-github github-mark"></i>
+        </a>
+      </div>
+    </div>
   </div>
 </div>
