Added score component back

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -20,6 +20,13 @@
           <button
             type="button"
             class="btn btn-outline-secondary mobile-button"
+            [routerLink]="['/scores']"
+          >
+            Scores
+          </button>
+          <button
+            type="button"
+            class="btn btn-outline-secondary mobile-button"
             [routerLink]="['/leaderboard']"
           >
             Leaderboards
@@ -51,15 +58,15 @@
               About
             </button>
           </li>
-          <!-- <li class="nav-item">
-        <button
-          type="button"
-          class="btn-outline-secondary normal-button"
-          [routerLink]="['/dates']"
-        >
-          Scores
-        </button>
-      </li> -->
+          <li class="nav-item">
+            <button
+              type="button"
+              class="btn-outline-secondary normal-button"
+              [routerLink]="['/scores']"
+            >
+              Scores
+            </button>
+          </li>
           <li class="nav-item">
             <button
               type="button"
