--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -17,13 +17,13 @@
           >
             About
           </button>
-          <button
+          <!-- <button
             type="button"
             class="btn btn-outline-secondary mobile-button"
             [routerLink]="['/scores']"
           >
             Scores
-          </button>
+          </button> -->
           <button
             type="button"
             class="btn btn-outline-secondary mobile-button"
@@ -58,7 +58,7 @@
               About
             </button>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <button
               type="button"
               class="btn-outline-secondary normal-button"
@@ -66,7 +66,7 @@
             >
               Scores
             </button>
-          </li>
+          </li> -->
           <li class="nav-item">
             <button
               type="button"
