--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,10 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "mdb-angular-ui-kit/assets/scss/mdb.scss";
+@import "mat-icon-button-sizes/style.css";
+@import "mat-icon-button-sizes/styles/mat-icon-button-size.mixin";
+
+// adding a custom override for the large size
+@include MatIconButtonSize("large", 100px, 60px);
 
 html,
 body {
